--- a/src/container/Home/index.css
+++ b/src/container/Home/index.css
@@ -1,7 +1,32 @@
 .home {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #4F6D7A;
+    height: 100%;
+}
+
+.home .reverse {
+    display: flex;
+    align-items: center;
+    color: #FFF;
+}
+
+.home .reverse img {
+    width: 25px;
+    height: 20px;
+    margin-right: 10px;
+}
+
+.home .gear {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.home .gear img {
+    height: 25px;
+    width: 25px;
 }
