--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,22 @@
-body {
+body, p {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.layout-core {
+  background-color: #eae9ef;
 }
 
 html, body, .layout-core, #root, .page {
   height: 100%;
   padding: 0;
   margin: 0;
+}
+
+ul, li {
+  background-color: #FFF;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
