--- a/src/container/Home/Components/InputText/index.css
+++ b/src/container/Home/Components/InputText/index.css
@@ -13,11 +13,13 @@
     border-radius: 5px 0px 0px 5px;
     color: #4F6D7A;
     font-size: 18px;
+    margin: 0;
     outline: none;
 }
 
 .input-text input {
     flex: 1;
+    margin: 0;
     height: 40px;
     border: 0;
     padding: 0;
